04_git/aws/01-upstream/03-aws-upstream/01_bootstrap/05-vault/yaml/vault/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress-03-aws-upstream
  namespace: vault
spec:
  ingressClassName: external-nginx
  rules:
    - host: 03-aws-upstream-vault.panwang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-03-aws-upstream-ui
                # name: 03-aws-upstream-vault-ingress-ui
                port:
                  number: 8200
